# eventuary

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
crates/eventuary/: Cargo.toml  README.md
crates/eventuary-conformance/: Cargo.toml  README.md
crates/eventuary-conformance/src/: capabilities.rs  cases.rs  factory.rs  lib.rs
crates/eventuary-core/: Cargo.toml  README.md
crates/eventuary-core/src/: collector.rs  context.rs  cursor.rs  error.rs  event.rs  event_key.rs  field_map.rs  lib.rs  metadata.rs  namespace.rs  namespace_pattern.rs  partition.rs  payload.rs  payload_codec.rs  serialization.rs  start_from.rs  topic_pattern.rs
crates/eventuary-core/src/io/: acker.rs  batched_stream.rs  checkpoint.rs  consumer.rs  cursor.rs  duplex.rs  filter.rs  filters.rs  handler.rs  message.rs  mod.rs  owner_id.rs  partition_coordinator.rs  partitionable_subscription.rs  position.rs  reader.rs  spawned_stream.rs  stream.rs  stream_id.rs  subscription.rs  writer.rs
crates/eventuary-core/src/io/acker/: batched.rs  either.rs  mod.rs  nack_context.rs  noop.rs  once.rs
crates/eventuary-core/src/io/consumer/: background.rs
crates/eventuary-core/src/io/consumers/: background.rs  mod.rs  retry.rs
crates/eventuary-core/src/io/handler/: filtered.rs  inspect.rs  multiplexer.rs  rate_limit.rs  retry.rs  subscriber_work.rs  timeout.rs
crates/eventuary-core/src/io/reader/: batch.rs  buffer.rs  checkpoint.rs  claim_buffer.rs  concurrency_limit.rs  coordinated.rs  decode.rs  dedupe.rs  encoded_cursor.rs  filtered.rs  inspect.rs  map.rs  merge.rs  outcome_router.rs  partitioned.rs  rate_limit.rs  recover.rs  replay_then_live.rs  timeout.rs  try_map.rs  watermark.rs  window.rs
crates/eventuary-core/src/io/readers/: checkpoint_reader.rs  filtered_reader.rs  mod.rs  partitioned_reader.rs
crates/eventuary-core/src/io/stream/: batched.rs  spawned.rs
crates/eventuary-core/src/io/writer/: batch.rs  encode.rs  fanout.rs  filtered.rs  flat_map.rs  inspect.rs  map.rs  retry.rs  timeout.rs
crates/eventuary-core/src/partition/: composite.rs  event_key.rs  hasher.rs  metadata.rs  mod.rs  namespace.rs  organization.rs  topic.rs  types.rs
crates/eventuary-kafka/: Cargo.toml  README.md
crates/eventuary-kafka/src/: flusher.rs  lib.rs  reader.rs  reader_config.rs  writer.rs
crates/eventuary-kafka/tests/: integration.rs
crates/eventuary-memory/: Cargo.toml  README.md
crates/eventuary-memory/src/: buffer.rs  buffer_store.rs  checkpoint_store.rs  claim_buffer_store.rs  coordinator.rs  dedupe_store.rs  lib.rs  multiplexer_store.rs  partition_coordinator.rs  reader.rs  subscriber_work.rs  subscriber_work_store.rs  watermark_store.rs  writer.rs
crates/eventuary-memory/tests/: conformance.rs  encoded_cursor_composition.rs
crates/eventuary-postgres/: Cargo.toml  README.md
crates/eventuary-postgres/migrations/: 0001_init.sql  0002_stores.sql  0003_monotonic_checkpoints.sql  0004_partition_columns.sql  0005_partition_coordination.sql  0006_buffer_claims.sql  0007_partition_count_coordination.sql  0008_required_event_key.sql
crates/eventuary-postgres/src/: buffer.rs  buffer_store.rs  checkpoint.rs  checkpoint_store.rs  claim_buffer_store.rs  coordinated_acker.rs  coordinated_reader.rs  database.rs  dedupe_store.rs  event_log.rs  lib.rs  multiplexer.rs  multiplexer_store.rs  partition_backfill.rs  partition_coordinator.rs  partition_cursor.rs  partitioning.rs  reader.rs  relation.rs  schema.rs  watermark_store.rs  writer.rs
crates/eventuary-postgres/tests/: claim_buffer_store.rs  composition.rs  conformance.rs  coordinated_acker.rs  coordinated_ownership_loss.rs  coordinated_reader.rs  integration.rs  partition_backfill.rs  partition_coordinator.rs  poison_decode.rs  reader_partitioning.rs  schema_components.rs  stores.rs  writer_partitioning.rs
crates/eventuary-sqlite/: Cargo.toml  README.md
crates/eventuary-sqlite/migrations/: 0001_init.sql  0002_stores.sql  0003_monotonic_checkpoints.sql  0004_partition_columns.sql  0005_partition_coordination.sql  0006_partition_count_coordination.sql  0008_required_event_key.sql
crates/eventuary-sqlite/src/: buffer_store.rs  checkpoint_store.rs  coordinated_reader.rs  database.rs  dedupe_store.rs  event_log.rs  lib.rs  multiplexer.rs  multiplexer_store.rs  partition_coordinator.rs  partitioning.rs  reader.rs  relation.rs  schema.rs  watermark_store.rs  writer.rs
crates/eventuary-sqlite/tests/: composition.rs  conformance.rs  coordinated_reader.rs  integration.rs  partition_backfill.rs  poison_decode.rs  schema_components.rs  stores.rs
crates/eventuary-sqs/: Cargo.toml  README.md
crates/eventuary-sqs/src/: flusher.rs  lib.rs  reader.rs  reader_config.rs  writer.rs
crates/eventuary-sqs/tests/: integration.rs
crates/eventuary/src/: consumer_group_id.rs  event.rs  event_key.rs  lib.rs  organization.rs  partition.rs  payload.rs  selector.rs  serialization.rs  snapshot.rs  subscription.rs
crates/eventuary/src/io/: filters.rs  handler.rs  mod.rs  reader.rs  writer.rs
crates/eventuary/src/io/acker/: either.rs  mod.rs
crates/eventuary/src/io/consumers/: background.rs
crates/eventuary/tests/: backend_module_paths.rs
