[package]
name = "eventuary-core"
description = "Core event model and async IO traits for eventuary"
keywords = ["events", "event-sourcing", "streaming", "queue", "async"]
categories = ["asynchronous", "database", "development-tools"]
readme = "README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
either.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
