[package]
name = "eventuary-kafka"
description = "Apache Kafka event backend for eventuary"
keywords = ["events", "kafka", "streaming"]
categories = ["asynchronous", "database"]
readme = "README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
integration-tests = ["dep:testcontainers"]

[dependencies]
eventuary = { workspace = true }
chrono.workspace = true
futures.workspace = true
rdkafka.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
testcontainers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
