[package]
name = "eventuary-postgres"
description = "PostgreSQL event backend for eventuary"
keywords = ["events", "postgres", "event-sourcing"]
categories = ["asynchronous", "database"]
readme = "README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
integration-tests = ["dep:testcontainers"]

[dependencies]
eventuary = { workspace = true }
chrono.workspace = true
either.workspace = true
futures.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
testcontainers = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
