[package]
name = "eventuary"
description = "Event toolkit for logs, queues, streams, routing, replay, and acknowledgements"
keywords = ["events", "event-sourcing", "streaming", "queue", "async"]
categories = ["asynchronous", "database", "development-tools"]
readme = "../../README.md"
edition.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
memory = ["dep:eventuary-memory"]
sqlite = ["dep:eventuary-sqlite"]
postgres = ["dep:eventuary-postgres"]
sqs = ["dep:eventuary-sqs"]
kafka = ["dep:eventuary-kafka"]

[dependencies]
eventuary-core = { workspace = true }
eventuary-memory = { workspace = true, optional = true }
eventuary-sqlite = { workspace = true, optional = true }
eventuary-postgres = { workspace = true, optional = true }
eventuary-sqs = { workspace = true, optional = true }
eventuary-kafka = { workspace = true, optional = true }

[dev-dependencies]
serde_json.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lints]
workspace = true
